[tool.poetry]
name = "backlog-dl"
version = "0.1.0"
description = ""
authors = ["tatsuya <tatsuya@lotusandcompanyinc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[tool.poetry.scripts]
backlog_dl = "backlog_dl.cli:main"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
